// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Atoms/Button default 1`] = `
<button
  className="ui-button"
  onClick={[Function]}
>
  Call to action
</button>
`;

exports[`Storyshots Components/Atoms/Button with custom content 1`] = `
<button
  className="ui-button"
  onClick={[Function]}
>
  <em
    className="custom ui-button__content"
    size={null}
  >
    Call
  </em>
  <span
    className="ui-button__content"
  >
    to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with different icon size 1`] = `
<button
  className="ui-button"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-button__content ui-icon--large"
  >
    backup
  </i>
  <span
    className="ui-button__content"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Button with left icon 1`] = `
<button
  className="ui-button"
  onClick={[Function]}
>
  <i
    className="ui-icon ui-button__content"
  >
    backup
  </i>
  <span
    className="ui-button__content"
  >
    Call to action
  </span>
</button>
`;

exports[`Storyshots Components/Atoms/Icon default 1`] = `
<i
  className="ui-icon"
>
  face
</i>
`;

exports[`Storyshots Components/Atoms/Input default 1`] = `
<input
  className="ui-input ui-input--medium"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Input invalid 1`] = `
<input
  className="ui-input ui-input--medium ui-input--invalid"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Input valid 1`] = `
<input
  className="ui-input ui-input--medium ui-input--valid"
  onChange={[Function]}
  placeholder="Enter text here"
/>
`;

exports[`Storyshots Components/Atoms/Spinner default 1`] = `
<span
  className="ui-spinner"
/>
`;

exports[`Storyshots Components/Atoms/Spinner with custom size 1`] = `
<span
  className="ui-spinner ui-spinner--large"
/>
`;

exports[`Storyshots Examples/SearchField default 1`] = `
<div
  style={
    Object {
      "margin": "0 auto",
      "maxWidth": "380px",
      "padding": "1rem",
    }
  }
>
  <div
    className="search-field"
  >
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      autoComplete="off"
      className="ui-input search-field__input ui-input--large"
      id="downshift-0-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search for something"
      role="combobox"
      value=""
    />
    <i
      className="ui-icon search-field__icon ui-icon--large"
    >
      search
    </i>
  </div>
</div>
`;
